# gamma_SRME

./: .gitignore  README.md  pyproject.toml
gamma_SRME/: __init__.py  benchmark.py  data.py  phono3py_utils.py  phonons.py  phonopy_utils.py  relax.py  utils.py
models/CHGNet/: 1_gruneisen_srme.py  2_evaluate_gruneisen.py  metrics_gamma.txt
models/CHGNet/2025-07-07-CHGNet-phononDB-GAMMA-FIRE_2SR_force0.0001_sym1e-05/: run_params.json
models/M3GNet/: 1_gruneisen_srme.py  2_evaluate_gruneisen.py  metrics_gamma.txt
models/M3GNet/2025-07-07-M3GNet-phononDB-GAMMA-FIRE_2SR_force0.0001_sym1e-05/: run_params.json
models/MACE-L2/: 1_gruneisen_srme.py  2_evaluate_gruneisen.py  metrics_gamma.txt
models/MACE-L2/2025-07-07-MACE-phononDB-GAMMA-FIRE_2SR_force0.0001_sym1e-05/: run_params.json
models/MACE-M/: 1_gruneisen_srme.py  2_evaluate_gruneisen.py  metrics_gamma.txt
models/MACE-M/2025-07-07-MACE-phononDB-GAMMA-FIRE_2SR_force0.0001_sym1e-05/: run_params.json
models/MACE-OMAT/: 1_gruneisen_srme.py  metrics_gamma.txt
models/MACE-OMAT/2025-07-07-MACE-phononDB-GAMMA-FIRE_2SR_force0.0001_sym1e-05/: run_params.json
models/Orb-v1-MPTraj/: 1_gruneisen_srme.py  2_evaluate_gruneisen.py  metrics_gamma.txt
models/Orb-v1-MPTraj/2025-07-07-ORB-mptraj-only-v1-phononDB-GAMMA-FIRE_2SR_force0.0001_sym1e-05/: run_params.json
models/SevenNet-0/: 1_gruneisen_srme.py  2_evaluate_gruneisen.py  metrics_gamma.txt
models/SevenNet-MF-ompa/: 1_gruneisen_srme.py  2_evaluate_gruneisen.py  metrics_gamma.txt
(+3 files in other folders)
